--- a/composer.json
+++ b/composer.json
@@ -7,7 +7,11 @@
         "php": ">=7.2.5",
         "ext-ctype": "*",
         "ext-iconv": "*",
+        "composer/package-versions-deprecated": "1.11.99.1",
         "doctrine/annotations": "^1.0",
+        "doctrine/doctrine-bundle": "^2.2",
+        "doctrine/doctrine-migrations-bundle": "^3.0",
+        "doctrine/orm": "^2.8",
         "phpdocumentor/reflection-docblock": "^5.2",
         "sensio/framework-extra-bundle": "^5.6",
         "symfony/console": "5.2.*",
@@ -20,6 +24,7 @@
         "symfony/yaml": "5.2.*"
     },
     "require-dev": {
+        "symfony/maker-bundle": "^1.25",
         "symfony/stopwatch": "^5.2",
         "symfony/twig-bundle": "^5.2",
         "symfony/web-profiler-bundle": "^5.2"
